--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,4 +72,4 @@ body {
   font-family: 'Fira Sans';
   font-weight: 400;
   color: #090911;
-  background-color: #fafafa; }
+  background-color: #eaeaea; }
