--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,1 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700');
+
+@font-face {
+  font-family: 'Beauty';
+  src: url('/fonts/Beauty.otf');
+}
+
+@font-face {
+  font-family: 'Oldy';
+  src: url('/fonts/Arkhip.ttf');
+}
