--- a/src/sass/libs/_intro.scss
+++ b/src/sass/libs/_intro.scss
@@ -1,10 +1,16 @@
+.container {
+  width: 101.6%;
+  overflow-y: scroll;
+  background-color: red;
+}
+
 #main_title {
   position: absolute;
   font-family: 'Oldy';
   width: 250px;
   color: white;
   font-size: 2rem;
-  transform: translate(-149px, -168px);
+  transform: translate(-149px, -188px);
   font-weight: 100;
   letter-spacing: .1rem;
   path {
@@ -13,5 +19,11 @@
   text {
     fill: #fff
   }
-
+  .h2_com {
+    position: absolute;
+    font-size: 0.7rem;
+    top: 108px;
+    left: 50%;
+    transform: translateX(3px);
+  }
 }
