--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700");
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Quicksand");
 html {
   font-family: sans-serif;
   /* 1 */
@@ -76,9 +76,31 @@ svg:focus {
   font-family: 'Oldy';
   src: url("/fonts/Arkhip.ttf"); }
 
-.container {
-  width: 101.6%;
-  overflow-y: scroll;
+@font-face {
+  font-family: 'MySans';
+  src: url("/fonts/onesans.otf"); }
+
+#main-bar {
+  position: fixed;
+  height: 30px;
+  top: 20px;
+  left: 25px;
+  text-align: right; }
+  #main-bar .bar-wrapper #bar-trigger {
+    color: #ff2b70;
+    font-size: 1.1rem;
+    font-family: 'Josefin Sans'; }
+  #main-bar .bar-wrapper .bar-list .bar-item {
+    margin-bottom: 3px; }
+    #main-bar .bar-wrapper .bar-list .bar-item a {
+      text-decoration: none;
+      font-size: 1.1rem;
+      color: #313131; }
+      #main-bar .bar-wrapper .bar-list .bar-item a:visited {
+        color: #313131; }
+
+#intro {
+  width: 100%;
   background-color: red; }
 
 #main_title {
@@ -87,7 +109,7 @@ svg:focus {
   width: 250px;
   color: white;
   font-size: 2rem;
-  transform: translate(-149px, -188px);
+  transform: translate(-149px, -84px);
   font-weight: 100;
   letter-spacing: .1rem; }
   #main_title path {
@@ -97,13 +119,43 @@ svg:focus {
   #main_title .h2_com {
     position: absolute;
     font-size: 0.7rem;
-    top: 108px;
+    top: 106px;
     left: 50%;
     transform: translateX(3px); }
+
+#main-content .main-content-wrapper {
+  min-height: 800px; }
+
+.phrase-container {
+  width: 100%;
+  height: 650px;
+  position: relative; }
+  .phrase-container .phrase-wrapper {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 90%;
+    min-width: 350px;
+    max-width: 950px;
+    transform: translate(-50%, -50%);
+    text-align: left; }
+    .phrase-container .phrase-wrapper .phrase-content {
+      color: #313131;
+      font-size: 3.8rem;
+      -webkit-font-smoothing: antialiased !important;
+      letter-spacing: 0.3rem;
+      line-height: 4rem;
+      font-family: 'MySans';
+      cursor: pointer; }
 
 body {
   font-family: 'Fira Sans';
   font-weight: 400;
   color: #090911;
-  background-color: #eaeaea;
-  overflow: hidden; }
+  background-color: #f3f3f6;
+  overflow-x: hidden; }
+
+a {
+  text-decoration: none; }
+  a:visited {
+    color: #313131; }
