--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Quicksand');
+
 
 @font-face {
   font-family: 'Beauty';
@@ -8,4 +9,9 @@
 @font-face {
   font-family: 'Oldy';
   src: url('/fonts/Arkhip.ttf');
+}
+
+@font-face {
+  font-family: 'MySans';
+  src: url('/fonts/onesans.otf');
 }
