--- a/public/css/main.css
+++ b/public/css/main.css
@@ -185,25 +185,59 @@ svg:focus {
 
 .phrase-container {
   width: 100%;
-  height: 650px;
+  height: 250px;
   position: relative; }
   .phrase-container .phrase-wrapper {
     position: absolute;
     left: 50%;
     top: 50%;
-    width: 90%;
+    width: 80%;
     min-width: 350px;
     max-width: 950px;
-    transform: translate(-50%, -50%);
-    text-align: left; }
-    .phrase-container .phrase-wrapper .phrase-content {
-      color: #313131;
-      font-size: 3.8rem;
-      -webkit-font-smoothing: antialiased !important;
-      letter-spacing: 0.3rem;
-      line-height: 4rem;
-      font-family: 'MySans';
-      cursor: pointer; }
+    transform: translate(-50%, -170%);
+    text-align: center; }
+    .phrase-container .phrase-wrapper .phrase-content .phrase-links-container {
+      font-size: 8vw;
+      max-font-size: 9vw; }
+      .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple {
+        color: #313131;
+        -webkit-font-smoothing: antialiased !important;
+        letter-spacing: 0.2rem;
+        font-family: 'MySans'; }
+        .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple .phrase-word .phrase-link {
+          cursor: pointer; }
+          .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple .phrase-word .phrase-link:hover {
+            color: #ff2b70; }
+      .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple[title='num0'] {
+        font-size: 100%;
+        line-height: 1.1em; }
+      .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple[title='num1'] {
+        font-size: 60%;
+        line-height: 1.1em; }
+      .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple[title='num2'] {
+        font-size: 45%;
+        line-height: 1.2em; }
+      .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple[title='thats-me'] {
+        font-size: 35%;
+        line-height: 1.2em; }
+
+@media all and (min-width: 460px) {
+  .phrase-container {
+    height: 450px; }
+    .phrase-container .phrase-wrapper {
+      transform: translate(-50%, -140%); } }
+
+@media all and (min-width: 960px) {
+  .phrase-container {
+    height: 450px; }
+    .phrase-container .phrase-wrapper {
+      transform: translate(-50%, -50%); }
+  .phrase-links-container {
+    font-size: 5.4rem !important; } }
+
+@media all and (min-width: 1240px) {
+  .phrase-links-container {
+    font-size: 6rem !important; } }
 
 body {
   font-family: 'Fira Sans';
