--- a/src/sass/libs/_bar.scss
+++ b/src/sass/libs/_bar.scss
@@ -1,9 +1,10 @@
 #main-bar {
-  position: fixed;
   height: 30px;
-  top: 20px;
-  left:  25px;
-  text-align: right;
+  width: 100px;
+  float: left;
+  // top: 20px;
+  // left:  25px;
+  // text-align: right;
   // transform: translateX(-50%);
 
   .bar-wrapper {
