--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,17 @@
 @import "libs/articles";
 @import "libs/bioPhrase";
 
+%back1 {
+
+  background: rgba(245,245,245,1);
+  background: -moz-linear-gradient(top, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(245,245,245,1)), color-stop(46%, rgba(245,245,245,1)), color-stop(100%, rgba(219,255,252,1)));
+  background: -webkit-linear-gradient(top, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
+  background: -o-linear-gradient(top, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
+  background: -ms-linear-gradient(top, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
+  background: linear-gradient(to bottom, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#dbfffc', GradientType=0 );
+}
 
 body {
   font-family: 'Fira Sans';
@@ -18,6 +29,7 @@ body {
   color: rgb(9, 9, 17);
   background-color: $myWhite;
   overflow-x: hidden;
+  @extend %back1;
 }
 
 a {
