--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Quicksand');
-
+@import url('https://fonts.googleapis.com/css?family=Inknut+Antiqua:300,700');
 
 @font-face {
   font-family: 'Beauty';
