--- a/src/sass/libs/_bar.scss
+++ b/src/sass/libs/_bar.scss
@@ -1,17 +1,39 @@
 #main-bar {
   height: 30px;
-  width: 100px;
-  float: left;
-  // top: 20px;
-  // left:  25px;
-  // text-align: right;
-  // transform: translateX(-50%);
+  width: 30px;
+  position: fixed;
+  top: 23px;
+  left:  18px;
+
+  &:hover {
+    cursor: pointer;
+  }
 
   .bar-wrapper {
     #bar-trigger {
-      color: $secondaryColor;
-      font-size: 1.1rem;
-      font-family: 'Josefin Sans';
+      color: #888888;
+      font-family: 'Inknut Antiqua';
+      
+      .icon {
+        font-size: 1.1rem;
+      }
+      
+      .tag-info {
+        font-size: 0.9rem;
+        width: 280px;
+        height: 30px;
+        text-align: right;
+        transform: rotateZ(-90deg) translate(-140px, -125px);
+        letter-spacing: 0.02rem;
+
+        .message {
+          font-weight: 300;
+        }
+
+        .tag {
+          font-weight: 700;
+        }
+      }
     }
     .bar-list {
       .bar-item {
