--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Inknut+Antiqua:300,700');
+@import url('https://fonts.googleapis.com/css?family=Inknut+Antiqua:300,500,700,800,900|Vollkorn:400,400i,700,700i,900,900i');
 
 @font-face {
   font-family: 'Beauty';
@@ -13,6 +13,31 @@
 @font-face {
   font-family: 'MySans';
   src: url('/fonts/onesans.otf');
+}
+
+@font-face {
+  font-family: 'MySansM';
+  src: url('/fonts/onesansme.otf');
+}
+
+@font-face {
+  font-family: 'rabo';
+  src: url('/fonts/rabo.otf');
+}
+
+@font-face {
+  font-family: 'raexbo';
+  src: url('/fonts/raexbo.otf');
+}
+
+@font-face {
+  font-family: 'rali';
+  src: url('/fonts/rali.otf');
+}
+
+@font-face {
+  font-family: 'rame';
+  src: url('/fonts/rame.otf');
 }
 
 @font-face {
