--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -1,3 +1,69 @@
+// $width: 33.3%;
+
+// #main-content {
+//   width: 90%;
+//   text-align: center;
+//   display: inline-block;
+//   margin-left: 5%;
+//   height: auto;
+//   min-height: 700px;
+
+//   .main-over-wrapper {
+//     .main-content-wrapper {
+//       .grid-item-widthx2 {
+//         width: 66.6%;
+//       }
+  
+//       .grid-item{
+//         width: $width;
+//         overflow: hidden;
+//         margin-bottom: 75px;
+//         border-bottom: 1px solid rgba($mainColor, .2);
+//         transition: all 0.5s;
+  
+//         &:hover {
+//           cursor: pointer;
+//           img {
+//           }
+//         }
+        
+//         img {
+//           transition: all 0.3s ease-out;
+//           // -webkit-filter: grayscale(100%);
+//           // filter: grayscale(100%);
+//           width: 100%;
+//         }
+  
+//         .article-label {
+//           text-align: left;
+//           font-family: 'rame';
+//           color: $mainColor;
+//           line-height: 1.65rem;
+//           font-size: 1.2rem;
+//           margin-top: -2px;
+//           font-weight: 300;
+//           padding: 12px 0px;
+//           letter-spacing: 0.02rem;
+  
+//           &:after {
+//             content: ' ●';
+//             color: rgba($mainColor, 0.8);
+//             vertical-align: bottom;
+//             font-size: 0.9rem;
+//           }
+//         }
+  
+//         .title {}
+//       }
+//     }
+//   }
+
+// }
+
+// .grid-sizer {
+//   width: $width;
+// }
+
 $width: 33.3%;
 
 #main-content {
@@ -5,38 +71,59 @@ $width: 33.3%;
   text-align: center;
   display: inline-block;
   margin-left: 5%;
+  height: auto;
+  min-height: 700px;
 
-  .main-content-wrapper {
-    .grid-item-widthx2 {
-      width: 66.6%;
-    }
-
-    .grid-item{
-      width: $width;
-      overflow: hidden;
-      margin-bottom: 8px;
-      // border: 1px solid rgba(#000, .2);
-
-      &:hover {
-        cursor: pointer;
+  .main-over-wrapper {
+    .main-content-wrapper {
+      .grid-item-widthx2 {
+        width: 66.6%;
+      }
+  
+      .grid-item{
+        width: $width;
+        overflow: hidden;
+        border-bottom: 1px solid rgba($mainColor, .2);
         transition: all 0.5s;
+  
+        &:hover {
+          cursor: pointer;
+          img {
+          }
+        }
         
         img {
-          -webkit-filter: grayscale(40%);
-          filter: grayscale(40%);
           transition: all 0.3s ease-out;
+          // -webkit-filter: grayscale(100%);
+          // filter: grayscale(100%);
+          width: 100%;
         }
+  
+        .article-label {
+          text-align: left;
+          font-family: 'rame';
+          color: $mainColor;
+          line-height: 1.58rem;
+          font-size: 1.1rem;
+          margin-top: -6px;
+          font-weight: 300;
+          padding: 20px;
+          letter-spacing: 0.02rem;
+          padding-bottom: 35px;
+  
+          &:after {
+            content: ' ●';
+            color: rgba($mainColor, 0.8);
+            vertical-align: bottom;
+            font-size: 0.8rem;
+          }
+        }
+  
+        .title {}
       }
-
-      img {
-        -webkit-filter: grayscale(100%);
-        filter: grayscale(100%);
-        width: 100%;
-      }
-
-      .title {}
     }
   }
+
 }
 
 .grid-sizer {
@@ -44,25 +131,49 @@ $width: 33.3%;
 }
 
 @media all and (max-width: 3000px) {
-  .grid-sizer {width: 24.1% !important}
-  .grid-item {width: 24.1% !important}
-  .grid-item-widthx2 {width: 49.2% !important}
+  .grid-sizer {width: 25% !important}
+  .grid-item {width: 25% !important}
+  .grid-item-widthx2 {width: 50% !important}
 }
 
 @media all and (max-width: 1400px) {
-  .grid-sizer {width: 32.4% !important}
-  .grid-item {width: 32.4% !important}
-  .grid-item-widthx2 {width: 65% !important}
+  .grid-sizer {width: 33.3% !important}
+  .grid-item {width: 33.3% !important}
+  .grid-item-widthx2 {width: 66.6% !important}
 }
 
-@media all and (max-width: 900px) {
-  .grid-sizer {width: 49% !important}
-  .grid-item {width: 49% !important}
+@media all and (max-width: 1090px) {
+  .grid-sizer {width: 50% !important}
+  .grid-item {width: 50% !important}
   .grid-item-widthx2 {width: 100% !important}
 }
 
-@media all and (max-width: 460px) {
+@media all and (max-width: 582px) {
   .grid-sizer {width: 100% !important}
   .grid-item {width: 100% !important}
   .grid-item-widthx2 {width: 100% !important}
 }
+
+// @media all and (max-width: 3000px) {
+//   .grid-sizer {width: 23% !important}
+//   .grid-item {width: 23% !important}
+//   .grid-item-widthx2 {width: 48% !important}
+// }
+
+// @media all and (max-width: 1400px) {
+//   .grid-sizer {width: 31.3% !important}
+//   .grid-item {width: 31.3% !important}
+//   .grid-item-widthx2 {width: 61.8% !important}
+// }
+
+// @media all and (max-width: 1090px) {
+//   .grid-sizer {width: 47.5% !important}
+//   .grid-item {width: 47.5% !important}
+//   .grid-item-widthx2 {width: 100% !important}
+// }
+
+// @media all and (max-width: 582px) {
+//   .grid-sizer {width: 100% !important}
+//   .grid-item {width: 100% !important}
+//   .grid-item-widthx2 {width: 100% !important}
+// }
