--- a/src/sass/libs/_bioPhrase.scss
+++ b/src/sass/libs/_bioPhrase.scss
@@ -1,17 +1,12 @@
 .phrase-container {
   width: 100%;
-  height: 250px;
-  position: relative;
-
+  margin-bottom: 150px;
+  
   .phrase-wrapper {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 80%;
-    min-width: 350px;
-    max-width: 950px;
-    transform: translate(-50%, -170%);
+    width: 100%;
     text-align: center;
+    display: inline-block;
+
 
     .phrase-content {
       .phrase-links-container {
@@ -20,12 +15,13 @@
         .phrase-couple {
           color: $mainColor;
           -webkit-font-smoothing: antialiased !important;
-          letter-spacing: 0.2rem;
+          letter-spacing: 0.3rem;
           font-family: 'MySans';
 
           .phrase-word {
             .phrase-link {
               cursor: pointer;
+              transition: all .1s ease-in;
               &:hover {
                 color: $secondaryColor;
               }
@@ -45,33 +41,42 @@
 
         .phrase-couple[title='num2'] {
           font-size: 45%;
-          line-height: 1.2em;
+          line-height: 1.6em;
+          font-family: 'raexbo';
+
         }
 
         .phrase-couple[title='thats-me'] {
-          font-size: 35%;
-          line-height: 1.2em;
+          font-size: 28%;
+          line-height: 1em;
+          font-family: 'raexbo';
+          font-weight: 900;
+          letter-spacing: 0.5em;
+          text-transform: uppercase;
+          cursor: pointer;
         }
       }
     }
   }
 }
 
-@media all and (min-width: 460px) {
+@media all and (min-width: 1240px) {
   .phrase-container {
-    height: 450px;
     .phrase-wrapper {
-      transform: translate(-50%, -140%);
-
+      margin-bottom: 60px !important;
+      margin-top: 200px !important;
     }
+  }
+  .phrase-links-container {
+    font-size: 6rem !important;
   }
 }
 
 @media all and (min-width: 960px) {
   .phrase-container {
-    height: 450px;
     .phrase-wrapper {
-      transform: translate(-50%, -50%);
+      margin-bottom: 40px !important;
+      margin-top: 100px !important;
     }
   }
   .phrase-links-container {
@@ -79,8 +84,10 @@
   }
 }
 
-@media all and (min-width: 1240px) {
-  .phrase-links-container {
-    font-size: 6rem !important;
+@media all and (min-width: 460px) {
+  .phrase-container {
+    .phrase-wrapper {
+      margin-top: 50px;
+    }
   }
 }
