--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,14 +12,16 @@
 @import "libs/bioPhrase";
 
 %back1 {
+  $first: rgba(#f0f0f0, 1);
+  $second: rgba(#aaaaaa, 0.1);
 
-  background: rgba(245,245,245,1);
-  background: -moz-linear-gradient(top, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(245,245,245,1)), color-stop(46%, rgba(245,245,245,1)), color-stop(100%, rgba(219,255,252,1)));
-  background: -webkit-linear-gradient(top, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
-  background: -o-linear-gradient(top, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
-  background: -ms-linear-gradient(top, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
-  background: linear-gradient(to bottom, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 46%, rgba(219,255,252,1) 100%);
+  background: $first;
+  background: -moz-linear-gradient(top, $first 0%, $first 16%, $second 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, $first), color-stop(16%, $first), color-stop(100%, $second)) url('/img/noise.png');
+  background: -webkit-linear-gradient(top, $first 0%, $first 16%, $second 100%) url('/img/noise.png');
+  background: -o-linear-gradient(top, $first 0%, $first 16%, $second 100%);
+  background: -ms-linear-gradient(top, $first 0%, $first 16%, $second 100%);
+  background: linear-gradient(to bottom, $first 0%, $first 16%, $second 100%), url('/img/noise.png');
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#dbfffc', GradientType=0 );
 }
 
