changed colors, added antialising

--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -1,6 +1,6 @@
 $body: #eaeaea;
 
-$mainColor: #313131;
-$secondaryColor: #888888;
+$mainColor: #2f304b;
+$secondaryColor: #ff684d;
 
 $myWhite: #f3f3f6;
