--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,7 +12,7 @@
 @import "libs/bioPhrase";
 
 %back1 {
-  $first: rgba(#f0f0f0, 1);
+  $first: rgba(#ffffff, 1);
   $second: rgba(#aaaaaa, 0.1);
 
   background: $first;
