--- a/public/css/main.css
+++ b/public/css/main.css
@@ -166,7 +166,7 @@ svg:focus {
   #main-bar:hover {
     cursor: pointer; }
   #main-bar .bar-wrapper #bar-trigger {
-    color: rgba(49, 49, 49, 0.7);
+    color: rgba(47, 48, 75, 0.7);
     font-family: 'rame'; }
     #main-bar .bar-wrapper #bar-trigger .icon {
       font-size: 1.1rem; }
@@ -187,9 +187,9 @@ svg:focus {
     #main-bar .bar-wrapper .bar-list .bar-item a {
       text-decoration: none;
       font-size: 1.1rem;
-      color: #313131; }
+      color: #2f304b; }
       #main-bar .bar-wrapper .bar-list .bar-item a:visited {
-        color: #313131; }
+        color: #2f304b; }
 
 #intro {
   width: 100%;
@@ -198,22 +198,21 @@ svg:focus {
 #main_title {
   position: absolute;
   font-family: 'Oldy';
-  width: 250px;
+  width: 280px;
   color: white;
-  font-size: 2rem;
-  transform: translate(-149px, -84px);
-  font-weight: 100;
-  letter-spacing: .1rem; }
+  font-size: 2.2rem;
+  left: 50%;
+  top: 50%; }
   #main_title path {
     fill: transparent; }
   #main_title text {
     fill: #fff; }
   #main_title .h2_com {
     position: absolute;
-    font-size: 0.7rem;
-    top: 106px;
+    font-size: 0.9rem;
+    top: 120px;
     left: 50%;
-    transform: translateX(3px); }
+    transform: translateX(0px); }
 
 #main-content {
   width: 90%;
@@ -227,7 +226,7 @@ svg:focus {
   #main-content .main-over-wrapper .main-content-wrapper .grid-item {
     width: 33.3%;
     overflow: hidden;
-    border-bottom: 1px solid rgba(49, 49, 49, 0.2);
+    border-bottom: 1px solid rgba(47, 48, 75, 0.2);
     transition: all 0.5s; }
     #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover {
       cursor: pointer; }
@@ -237,7 +236,7 @@ svg:focus {
     #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-label {
       text-align: left;
       font-family: 'rame';
-      color: #313131;
+      color: #2f304b;
       line-height: 1.58rem;
       font-size: 1.1rem;
       margin-top: -6px;
@@ -247,7 +246,7 @@ svg:focus {
       padding-bottom: 35px; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-label:after {
         content: ' ●';
-        color: rgba(49, 49, 49, 0.8);
+        color: rgba(47, 48, 75, 0.8);
         vertical-align: bottom;
         font-size: 0.8rem; }
 
@@ -296,7 +295,7 @@ svg:focus {
     .phrase-container .phrase-wrapper .phrase-content .phrase-links-container {
       font-size: 8vw; }
       .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple {
-        color: #313131;
+        color: #2f304b;
         -webkit-font-smoothing: antialiased !important;
         letter-spacing: 0.3rem;
         font-family: 'MySans'; }
@@ -304,7 +303,7 @@ svg:focus {
           cursor: pointer;
           transition: all .1s ease-in; }
           .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple .phrase-word .phrase-link:hover {
-            color: #888888; }
+            color: #ff684d; }
       .phrase-container .phrase-wrapper .phrase-content .phrase-links-container .phrase-couple[title='num0'] {
         font-size: 100%;
         line-height: 1.1em; }
@@ -343,13 +342,13 @@ svg:focus {
     margin-top: 50px; } }
 
 body {
-  background: #f0f0f0;
-  background: -moz-linear-gradient(top, #f0f0f0 0%, #f0f0f0 16%, rgba(170, 170, 170, 0.1) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, #f0f0f0), color-stop(16%, #f0f0f0), color-stop(100%, rgba(170, 170, 170, 0.1))) url("/img/noise.png");
-  background: -webkit-linear-gradient(top, #f0f0f0 0%, #f0f0f0 16%, rgba(170, 170, 170, 0.1) 100%) url("/img/noise.png");
-  background: -o-linear-gradient(top, #f0f0f0 0%, #f0f0f0 16%, rgba(170, 170, 170, 0.1) 100%);
-  background: -ms-linear-gradient(top, #f0f0f0 0%, #f0f0f0 16%, rgba(170, 170, 170, 0.1) 100%);
-  background: linear-gradient(to bottom, #f0f0f0 0%, #f0f0f0 16%, rgba(170, 170, 170, 0.1) 100%), url("/img/noise.png");
+  background: white;
+  background: -moz-linear-gradient(top, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, white), color-stop(16%, white), color-stop(100%, rgba(170, 170, 170, 0.1))) url("/img/noise.png");
+  background: -webkit-linear-gradient(top, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%) url("/img/noise.png");
+  background: -o-linear-gradient(top, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%);
+  background: -ms-linear-gradient(top, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%);
+  background: linear-gradient(to bottom, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%), url("/img/noise.png");
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#dbfffc', GradientType=0 ); }
 
 body {
@@ -362,4 +361,4 @@ body {
 a {
   text-decoration: none; }
   a:visited {
-    color: #313131; }
+    color: #2f304b; }
